fixed spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -59,3 +59,11 @@ img {
 .hide {
     display: none;
 }
+
+.space {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
+}
